<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#302F2F"
    android:backgroundTint="#2E2D2D"
    android:contextClickable="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="391dp"
        android:layout_height="175dp"
        android:background="#FFFBFB"
        android:backgroundTint="#535353"
        android:textColor="#D8D4D4"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button17"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:backgroundTint="#302F2F"
        android:text="@string/btnc"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#C770D6"
        android:textColorHighlight="#882505"
        android:textSize="25sp"
        android:textStyle="normal"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="C L E A R" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="377dp"
        android:layout_height="497dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/bnt1"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn2"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn3"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="108dp"
            android:layout_height="136dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btndiv"
            android:textSize="22sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="376dp"
        android:layout_height="370dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn4"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn5"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn6"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="108dp"
            android:layout_height="136dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnmul"
            android:textSize="22sp" />

    </TableRow>

    <TableRow
        android:layout_width="381dp"
        android:layout_height="107dp"
        android:backgroundTint="#151414"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn7"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn8"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn9"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="110dp"
            android:layout_height="139dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnmod"
            android:textSize="22sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="381dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#B52E04"
            android:text="@string/btneql"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:backgroundTint="#302F2F"
            android:text="@string/btn0"
            android:textColor="#F40456"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="78dp"
            android:layout_height="130dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnadd"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnsub"
            android:textSize="22sp" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>